# Agri-Sarthi

./: .env.example  .gitignore  README.md  Readme.md
backend/: .env.example  Readme.md  __init__.py  agent.py  asgi.py  client.py  debug_env.py  gateway.py  graph_visualizer.py  main.py  minimal_main.py  pyproject.toml  rag.py  requirements.txt  settings.py  simple_server.py  test_backend.py  test_voice.py  tools.py  urls.py
backend/voice/: __init__.py  audio_utils.py  models.py  sarvam_voice.py  services.py  twilio_handler.py  urls.py  utils.py  views.py
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DESIGN_DOCUMENT.md
frontend/: Readme.md  package.json
frontend/public/: index.html  manifest.json  robots.txt
frontend/src/: App.css  App.js  Chat.js  index.css
frontend/src/components/: Chat.css  Chat.js  Footer.css  Footer.js  Header.css  Header.js  HomePage.css  HomePage.js  MessageActions.css  MessageActions.js
frontend/src/services/: sarvamService.js
notebooks/: 01_data_ingestion.py  02_agent_tools.py  03_agent_workflow.py  04_deploy_serving.py  05_dashboard.py  06_evaluation.py  07_mandi_price_job.py
scripts/: ingest_mandi_local.py  setup_twilio.py  setup_wppconnect.py
whatsapp/: __init__.py  databricks_client.py  main.py  requirements.txt  sarvam.py
whatsapp/config/: config.py  logging.py
whatsapp/wppconnect/: api.py
